racer/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: game-racer
  name: racer-service
  labels:
    app: racer
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /racer/index.html
spec:
  type: NodePort
  selector:
    app: racer
  ports:
    - port: 80
      targetPort: 80
